<resources>
    <string name="channel" translatable="false">NOTIFICATIONCHANNEL</string>
    <string name="app_name">BitMEX Ticker</string>
    <string name="app_name_uppercase">BITMEX Ticker</string>
    <string name="Ticker">Ticker</string>
    <string name="Agreement">Information providing agreement</string>
    <string name="agreementContext">In providing this information, I agree that this application has no legal
        responsibility.
    </string>

    <string name="InternetCheck">Check your internet connection.</string>
    <string name="NotificationWarning">" It will be updated."</string>

    <!-- Main String Sources -->
    <string name="tem">---</string>
    <string name="deletion">Delete</string>

    <string name="Recent_Trades">Recent Trades</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="Symbol">Symbol</string>
    <string name="dominance">BTC Dominance</string>
    <string name="market">Market Cap</string>


    <!-- setting String Sources -->
    <string name="open_source">AndroidWebSocket\nhttps://www.naver.com\n</string>
    <string name="version" translatable="false">1.0.1(2)</string>
    <string name="admin_mail">iveinvalue@gmail.com</string>
    <string name="store_url">io.wiffy.bitmexticker</string>

    <string name="LightTheme">Light Theme</string>
    <string name="UserSettings">USER SETTING</string>
    <string name="Setting_title">Setting</string>
    <string name="Info">INFO</string>
    <string name="OpenSource">OpenSource</string>
    <string name="Version">Version</string>
    <string name="FEEDBACK">FEEDBACK</string>
    <string name="Play_store_review">Play Store Review</string>
    <string name="Developer_Email">Developer Email</string>
    <string name="Language">Language</string>

    <!-- Menu Title Sources -->
    <string name="Title">title</string>

    <string name="OrderBook">OrderBook</string>
    <string name="Details">Details</string>
    <string name="Notification">Notification</string>


    <!-- Fragment OrderBook Sources -->
    <string name="Sell_example">0000 - Sell - 00</string>

    <string name="Ask">Ask</string>
    <string name="Price">Price</string>
    <string name="Bid">Bid</string>
    <string name="alert">Add alert</string>

    <string name="beta1">Beta version Closed</string>
    <string name="beta2">Please Buy Pro version</string>


    <string name="PRO_UPGRADE">PRO UPGRADE</string>
    <string name="subscribe_now">Subscribe Now!</string>
    <string name="price_notification">Price Notification</string>
    <string name="support_in_widgets">Support in Widgets</string>
    <string name="coming_soon" translatable="false">Coming Soon</string>
    <string name="remove_ad">Remove Advertisement</string>
    <string name="continuously">Continuously Upgrading</string>
    <string name="month">$4.99 / MONTH</string>
    <string name="terms_of">Terms Of Service and Privacy Policy</string>
    <string name="purchase_restore">Purchase Restore</string>
</resources>
