<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/orderbooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/orderbook_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="---"
            android:textColor="@color/myBlue"
            android:textStyle="bold" />

    <RelativeLayout
            android:id="@+id/orderbook_large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/orderbook_view"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

        <RelativeLayout
                android:id="@+id/ordrbook_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:cardBackgroundColor="#333B7AD2"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Ask"
                        android:textAlignment="center"
                        android:textColor="#4B78CC"
                        android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    app:cardBackgroundColor="#333B7AD2"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Price"
                        android:textAlignment="center"
                        android:textColor="#4B78CC"
                        android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardBackgroundColor="#333B7AD2"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Bid"
                        android:textAlignment="center"
                        android:textColor="@color/myBlue"
                        android:textStyle="bold" />

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ordrbook_titles">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/orderbookRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>


</RelativeLayout>