<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/WHITE"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/WHITE">

        <TextView
                android:id="@+id/langSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:text="@string/Language"
                android:textColor="@color/light_title" />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/langSet">

            <RelativeLayout
                    android:id="@+id/lang_EN"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="English"
                        android:textColor="@color/light_title2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:buttonTint="@color/green"
                        android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/lang_KO"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lang_EN"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="한국어"
                        android:textColor="@color/light_title2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:buttonTint="@color/green"
                        android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/lang_ZH"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lang_KO"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="中文"
                        android:textColor="@color/light_title2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:buttonTint="@color/green"
                        android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/lang_JA"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lang_ZH"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="日本語"
                        android:textColor="@color/light_title2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:buttonTint="@color/green"
                        android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/makeText"
                    android:layout_width="200dp"
                    android:layout_height="10dp"
                    android:layout_below="@id/lang_JA">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/red"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/makeText">

                <Button
                        android:id="@+id/OK"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:background="@drawable/dialog_button"
                        android:text="@string/OK"
                        android:textColor="@color/WHITE" />

                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_centerInParent="true" />

                <Button
                        android:id="@+id/CANCEL"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:background="@drawable/dialog_button"
                        android:text="@string/CANCEL"
                        android:textColor="@color/WHITE" />

            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>