<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/light_table_out">

    <RelativeLayout
            android:backgroundTint="#ffffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/langSet"
                android:textColor="@color/light_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_margin="15dp"/>
        <RelativeLayout
                android:id="@+id/lang_Relative"
                android:layout_below="@id/langSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/lang_EN"
                    android:layout_alignParentTop="true"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:textColor="@color/light_title2"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="English"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/green"
                        android:clickable="false"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/lang_KO"
                    android:layout_below="@id/lang_EN"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:textColor="@color/light_title2"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="한국어"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/green"
                        android:clickable="false"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/lang_ZH"
                    android:layout_below="@id/lang_KO"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:textColor="@color/light_title2"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="中文"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/green"
                        android:clickable="false"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                    android:background="@drawable/custom_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/lang_JA"
                    android:layout_below="@id/lang_ZH"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:textColor="@color/light_title2"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="日本語"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:buttonTint="@color/green"
                        android:clickable="false"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/makeText"
                    android:layout_below="@id/lang_JA"
                    android:layout_width="200dp"
                    android:layout_height="10dp">
                <TextView
                        android:textColor="@color/red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="8sp"
                        tools:ignore="SmallSp"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/button_lan"
                    android:layout_below="@id/makeText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">
                <Button
                        android:background="@drawable/dialog_button"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:layout_margin="15dp"
                        android:id="@+id/OK"
                        android:textColor="@color/WHITE"
                        android:text="@string/OK"
                        android:layout_width="80dp"
                        android:layout_height="30dp"/>
                <View
                        android:id="@+id/centeralView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_centerInParent="true"
                />
                <Button
                        android:background="@drawable/dialog_button"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/WHITE"
                        android:layout_margin="15dp"
                        android:text="@string/CANCEL"
                        android:id="@+id/CANCEL"
                        android:layout_width="80dp"
                        android:layout_height="30dp"/>

            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>